--- a/agent-backend/src/main/resources/application.properties
+++ b/agent-backend/src/main/resources/application.properties
@@ -23,6 +23,9 @@ adk.max-tokens=2048
 # WebSocket Configuration
 websocket.allowed-origins=http://localhost:4200
 
+# MCP Server Configuration
+mcp.server.url=http://localhost:8081
+
 # GCP Configuration
 gcp.project.id=${GOOGLE_CLOUD_PROJECT}
 gcp.location=${GOOGLE_CLOUD_LOCATION}
