--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,7 +26,7 @@ http {
         }
 
         location /agent {
-            proxy_pass http://backend:8080;
+            proxy_pass http://agent-backend:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
