added separate booking agent using A2A

--- a/agent-backend/src/main/resources/application.properties
+++ b/agent-backend/src/main/resources/application.properties
@@ -26,6 +26,9 @@ websocket.allowed-origins=http://localhost:4200
 # MCP Server Configuration
 mcp.server.url=http://localhost:8081
 
+# A2A Server Configuration
+a2a.booking.url=http://localhost:8082
+
 # GCP Configuration
 gcp.project.id=${GOOGLE_CLOUD_PROJECT}
 gcp.location=${GOOGLE_CLOUD_LOCATION}
